--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <html>
-    <head>
+
+<head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+    <title>Simple Interest Calculator</title>
+</head>
+
+<body>
+    <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        Amount <input type="number" id="principal"> <br />
+        Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate"> <br />
+        No. of Years <input type="number" id="years"> <br />
         Interest : <span id="result"></span><br>
 
         <button onclick="compute()">Compute</button>
-    </body>
+    </div>
+</body>
+
 </html>
