--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
 <body>
     <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
-
         Amount <input type="number" id="principal"> <br />
-        Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate"> <br />
-        No. of Years <input type="number" id="years"> <br />
+        Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate"><span>10.25 %</span> <br />
+        <label for="Years">No. of Years:</label>
+        <select name="years" id="years">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </select><br>
+        
+        <button onclick="compute()">Compute Interest</button><br>
         Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+        <footer>&#169; Everyone Can Get Rich</footer>
     </div>
 </body>
 
