--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
-        Amount <input type="number" id="principal"> <br />
-        Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate"><span>10.25 %</span> <br />
-        <label for="Years">No. of Years:</label>
+        <br>Amount <input type="number" id="principal" > <br />
+        <br>Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange=show_value(this.value);><span id="slider_value" style="color:red;"></span> <br />
+        <br><label for="Years">No. of Years:</label>
         <select name="years" id="years">
             <option value="1">1</option>
             <option value="2">2</option>
@@ -24,9 +24,9 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select><br>
-        
-        <button onclick="compute()">Compute Interest</button><br>
-        Interest : <span id="result"></span><br>
+        <br><button onclick="compute()">Compute Interest</button><br>
+        <br>Interest : <span id="result" ></span><br>
+        <br>
         <footer>&#169; Everyone Can Get Rich</footer>
     </div>
 </body>
